<?xml version="1.0"?>
<package>
  <name>ol_2d_rup</name>
  <version>0.0.0</version>
  <description>DMP_UR10_controller_package</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>param_lib</build_depend>
  <run_depend>param_lib</run_depend>

  <build_depend>math_lib</build_depend>
  <run_depend>math_lib</run_depend>

  <build_depend>bhand_lib</build_depend>
  <run_depend>bhand_lib</run_depend>

</package>
