<?xml version="1.0"?>
<package>
  <name>bhand_lib</name>
  <version>0.0.0</version>
  <description>The bhand_lib package</description>

  <maintainer email="slifer@todo.todo">slifer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>gtest</test_depend>

  <export></export>
</package>
